IPLL/A6_1/compiler phase03/y.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    HASH
    INVALID_TOKEN


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | INTEGER_CONSTANT
    3                   | CHARACTER_CONSTANT
    4                   | STRING_LITERAL
    5                   | LEFT_PARENTHESES expression RIGHT_PARENTHESES

    6 postfix_expression: primary_expression
    7                   | postfix_expression LEFT_SQUARE_BRACKET expression RIGHT_SQUARE_BRACKET
    8                   | postfix_expression LEFT_PARENTHESES argument_expression_list_opt RIGHT_PARENTHESES
    9                   | postfix_expression DOT IDENTIFIER
   10                   | postfix_expression ARROW IDENTIFIER
   11                   | postfix_expression INCREMENT
   12                   | postfix_expression DECREMENT
   13                   | LEFT_PARENTHESES type_name RIGHT_PARENTHESES LEFT_CURLY_BRACKET initialiser_list RIGHT_CURLY_BRACKET
   14                   | LEFT_PARENTHESES type_name RIGHT_PARENTHESES LEFT_CURLY_BRACKET initialiser_list COMMA RIGHT_CURLY_BRACKET

   15 argument_expression_list_opt: argument_expression_list
   16                             | ε

   17 argument_expression_list: assignment_expression
   18                         | argument_expression_list COMMA assignment_expression

   19 unary_expression: postfix_expression
   20                 | INCREMENT unary_expression
   21                 | DECREMENT unary_expression
   22                 | unary_operator cast_expression
   23                 | SIZEOF unary_expression
   24                 | SIZEOF LEFT_PARENTHESES type_name RIGHT_PARENTHESES

   25 unary_operator: BITWISE_AND
   26               | ASTERISK
   27               | PLUS
   28               | MINUS
   29               | TILDE
   30               | EXCLAMATION

   31 cast_expression: unary_expression
   32                | LEFT_PARENTHESES type_name RIGHT_PARENTHESES cast_expression

   33 multiplicative_expression: cast_expression
   34                          | multiplicative_expression ASTERISK cast_expression
   35                          | multiplicative_expression SLASH cast_expression
   36                          | multiplicative_expression MODULO cast_expression

   37 additive_expression: multiplicative_expression
   38                    | additive_expression PLUS multiplicative_expression
   39                    | additive_expression MINUS multiplicative_expression

   40 shift_expression: additive_expression
   41                 | shift_expression LEFT_SHIFT additive_expression
   42                 | shift_expression RIGHT_SHIFT additive_expression

   43 relational_expression: shift_expression
   44                      | relational_expression LESS_THAN shift_expression
   45                      | relational_expression GREATER_THAN shift_expression
   46                      | relational_expression LESS_EQUAL_THAN shift_expression
   47                      | relational_expression GREATER_EQUAL_THAN shift_expression

   48 equality_expression: relational_expression
   49                    | equality_expression EQUALS relational_expression
   50                    | equality_expression NOT_EQUALS relational_expression

   51 AND_expression: equality_expression
   52               | AND_expression BITWISE_AND equality_expression

   53 exclusive_OR_expression: AND_expression
   54                        | exclusive_OR_expression BITWISE_XOR AND_expression

   55 inclusive_OR_expression: exclusive_OR_expression
   56                        | inclusive_OR_expression BITWISE_OR exclusive_OR_expression

   57 M: ε

   58 N: ε

   59 logical_AND_expression: inclusive_OR_expression
   60                       | logical_AND_expression LOGICAL_AND M inclusive_OR_expression

   61 logical_OR_expression: logical_AND_expression
   62                      | logical_OR_expression LOGICAL_OR M logical_AND_expression

   63 conditional_expression: logical_OR_expression
   64                       | logical_OR_expression N QUESTION_MARK M expression N COLON M conditional_expression

   65 assignment_expression: conditional_expression
   66                      | unary_expression assignment_operator assignment_expression

   67 assignment_operator: ASSIGNMENT
   68                    | ASTERISK_ASSIGNMENT
   69                    | SLASH_ASSIGNMENT
   70                    | MODULO_ASSIGNMENT
   71                    | PLUS_ASSIGNMENT
   72                    | MINUS_ASSIGNMENT
   73                    | LEFT_SHIFT_ASSIGNMENT
   74                    | RIGHT_SHIFT_ASSIGNMENT
   75                    | BITWISE_AND_ASSIGNMENT
   76                    | BITWISE_XOR_ASSIGNMENT
   77                    | BITWISE_OR_ASSIGNMENT

   78 expression: assignment_expression
   79           | expression COMMA assignment_expression

   80 constant_expression: conditional_expression

   81 declaration: declaration_specifiers init_declarator_list_opt SEMI_COLON

   82 init_declarator_list_opt: init_declarator_list
   83                         | ε

   84 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   85                       | type_specifier declaration_specifiers_opt
   86                       | type_qualifier declaration_specifiers_opt
   87                       | function_specifier declaration_specifiers_opt

   88 declaration_specifiers_opt: declaration_specifiers
   89                           | ε

   90 init_declarator_list: init_declarator
   91                     | init_declarator_list COMMA init_declarator

   92 init_declarator: declarator
   93                | declarator ASSIGNMENT initialiser

   94 storage_class_specifier: EXTERN
   95                        | STATIC
   96                        | AUTO
   97                        | REGISTER

   98 type_specifier: VOIDTYPE
   99               | CHARTYPE
  100               | SHORT
  101               | INTTYPE
  102               | LONG
  103               | DOUBLE
  104               | SIGNED
  105               | UNSIGNED
  106               | BOOL
  107               | COMPLEX
  108               | IMAGINARY
  109               | enum_specifier

  110 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  111                         | type_qualifier specifier_qualifier_list_opt

  112 specifier_qualifier_list_opt: specifier_qualifier_list
  113                             | ε

  114 enum_specifier: ENUM identifier_opt LEFT_CURLY_BRACKET enumerator_list RIGHT_CURLY_BRACKET
  115               | ENUM identifier_opt LEFT_CURLY_BRACKET enumerator_list COMMA RIGHT_CURLY_BRACKET
  116               | ENUM IDENTIFIER

  117 identifier_opt: IDENTIFIER
  118               | ε

  119 enumerator_list: enumerator
  120                | enumerator_list COMMA enumerator

  121 enumerator: IDENTIFIER
  122           | IDENTIFIER ASSIGNMENT constant_expression

  123 type_qualifier: CONST
  124               | RESTRICT
  125               | VOLATILE

  126 function_specifier: INLINE

  127 declarator: pointer direct_declarator
  128           | direct_declarator

  129 change_scope: ε

  130 direct_declarator: IDENTIFIER
  131                  | LEFT_PARENTHESES declarator RIGHT_PARENTHESES
  132                  | direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list assignment_expression RIGHT_SQUARE_BRACKET
  133                  | direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list RIGHT_SQUARE_BRACKET
  134                  | direct_declarator LEFT_SQUARE_BRACKET assignment_expression RIGHT_SQUARE_BRACKET
  135                  | direct_declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
  136                  | direct_declarator LEFT_SQUARE_BRACKET STATIC type_qualifier_list assignment_expression RIGHT_SQUARE_BRACKET
  137                  | direct_declarator LEFT_SQUARE_BRACKET STATIC assignment_expression RIGHT_SQUARE_BRACKET
  138                  | direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list STATIC assignment_expression RIGHT_SQUARE_BRACKET
  139                  | direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list ASTERISK RIGHT_SQUARE_BRACKET
  140                  | direct_declarator LEFT_SQUARE_BRACKET ASTERISK RIGHT_SQUARE_BRACKET
  141                  | direct_declarator LEFT_PARENTHESES change_scope parameter_type_list RIGHT_PARENTHESES
  142                  | direct_declarator LEFT_PARENTHESES identifier_list RIGHT_PARENTHESES
  143                  | direct_declarator LEFT_PARENTHESES change_scope RIGHT_PARENTHESES

  144 type_qualifier_list_opt: type_qualifier_list
  145                        | ε

  146 pointer: ASTERISK type_qualifier_list_opt
  147        | ASTERISK type_qualifier_list_opt pointer

  148 type_qualifier_list: type_qualifier
  149                    | type_qualifier_list type_qualifier

  150 parameter_type_list: parameter_list
  151                    | parameter_list COMMA ELLIPSIS

  152 parameter_list: parameter_declaration
  153               | parameter_list COMMA parameter_declaration

  154 parameter_declaration: declaration_specifiers declarator
  155                      | declaration_specifiers

  156 identifier_list: IDENTIFIER
  157                | identifier_list COMMA IDENTIFIER

  158 type_name: specifier_qualifier_list

  159 initialiser: assignment_expression
  160            | LEFT_CURLY_BRACKET initialiser_list RIGHT_CURLY_BRACKET
  161            | LEFT_CURLY_BRACKET initialiser_list COMMA RIGHT_CURLY_BRACKET

  162 initialiser_list: designation_opt initialiser
  163                 | initialiser_list COMMA designation_opt initialiser

  164 designation_opt: designation
  165                | ε

  166 designation: designator_list ASSIGNMENT

  167 designator_list: designator
  168                | designator_list designator

  169 designator: LEFT_SQUARE_BRACKET constant_expression RIGHT_SQUARE_BRACKET
  170           | DOT IDENTIFIER

  171 statement: labeled_statement
  172          | compound_statement
  173          | expression_statement
  174          | selection_statement
  175          | iteration_statement
  176          | jump_statement

  177 labeled_statement: IDENTIFIER COLON statement
  178                  | CASE constant_expression COLON statement
  179                  | DEFAULT COLON statement

  180 change_block: ε

  181 compound_statement: LEFT_CURLY_BRACKET change_block change_scope block_item_list_opt RIGHT_CURLY_BRACKET

  182 block_item_list_opt: block_item_list
  183                    | ε

  184 block_item_list: block_item
  185                | block_item_list M block_item

  186 block_item: declaration
  187           | statement

  188 expression_statement: expression_opt SEMI_COLON

  189 expression_opt: expression
  190               | ε

  191 selection_statement: IF LEFT_PARENTHESES expression RIGHT_PARENTHESES M statement N
  192                    | IF LEFT_PARENTHESES expression RIGHT_PARENTHESES M statement N ELSE M statement
  193                    | SWITCH LEFT_PARENTHESES expression RIGHT_PARENTHESES statement

  194 iteration_statement: WHILE M LEFT_PARENTHESES expression RIGHT_PARENTHESES M statement
  195                    | DO M statement M WHILE LEFT_PARENTHESES expression RIGHT_PARENTHESES SEMI_COLON
  196                    | FOR LEFT_PARENTHESES expression_opt SEMI_COLON M expression_opt SEMI_COLON M expression_opt N RIGHT_PARENTHESES M statement
  197                    | FOR LEFT_PARENTHESES declaration expression_opt SEMI_COLON expression_opt RIGHT_PARENTHESES statement

  198 jump_statement: GOTO IDENTIFIER SEMI_COLON
  199               | CONTINUE SEMI_COLON
  200               | BREAK SEMI_COLON
  201               | RETURN expression_opt SEMI_COLON

  202 translation_unit: external_declaration
  203                 | translation_unit external_declaration

  204 external_declaration: function_definition
  205                     | declaration

  206 function_definition: declaration_specifiers declarator declaration_list_opt change_scope LEFT_CURLY_BRACKET block_item_list_opt RIGHT_CURLY_BRACKET

  207 declaration_list_opt: declaration_list
  208                     | ε

  209 declaration_list: declaration
  210                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AUTO (258) 96
    BREAK (259) 200
    CASE (260) 178
    CHARTYPE (261) 99
    CONST (262) 123
    CONTINUE (263) 199
    DEFAULT (264) 179
    DO (265) 195
    DOUBLE (266) 103
    ELSE (267) 192
    ENUM (268) 114 115 116
    EXTERN (269) 94
    FOR (270) 196 197
    GOTO (271) 198
    IF (272) 191 192
    INLINE (273) 126
    INTTYPE (274) 101
    LONG (275) 102
    REGISTER (276) 97
    RESTRICT (277) 124
    RETURN (278) 201
    SHORT (279) 100
    SIGNED (280) 104
    SIZEOF (281) 23 24
    STATIC (282) 95 136 137 138
    STRUCT (283)
    SWITCH (284) 193
    TYPEDEF (285)
    UNION (286)
    UNSIGNED (287) 105
    VOIDTYPE (288) 98
    VOLATILE (289) 125
    WHILE (290) 194 195
    BOOL (291) 106
    COMPLEX (292) 107
    IMAGINARY (293) 108
    IDENTIFIER <symbol> (294) 1 9 10 116 117 121 122 130 156 157 170 177 198
    INTEGER_CONSTANT <intVal> (295) 2
    CHARACTER_CONSTANT <charVal> (296) 3
    STRING_LITERAL <stringVal> (297) 4
    LEFT_SQUARE_BRACKET (298) 7 132 133 134 135 136 137 138 139 140 169
    INCREMENT (299) 11 20
    SLASH (300) 35
    QUESTION_MARK (301) 64
    ASSIGNMENT (302) 67 93 122 166
    COMMA (303) 14 18 79 91 115 120 151 153 157 161 163
    RIGHT_SQUARE_BRACKET (304) 7 132 133 134 135 136 137 138 139 140 169
    LEFT_PARENTHESES (305) 5 8 13 14 24 32 131 141 142 143 191 192 193 194 195 196 197
    LEFT_CURLY_BRACKET (306) 13 14 114 115 160 161 181 206
    RIGHT_CURLY_BRACKET (307) 13 14 114 115 160 161 181 206
    DOT (308) 9 170
    ARROW (309) 10
    ASTERISK (310) 26 34 139 140 146 147
    PLUS (311) 27 38
    MINUS (312) 28 39
    TILDE (313) 29
    EXCLAMATION (314) 30
    MODULO (315) 36
    LEFT_SHIFT (316) 41
    RIGHT_SHIFT (317) 42
    LESS_THAN (318) 44
    GREATER_THAN (319) 45
    LESS_EQUAL_THAN (320) 46
    GREATER_EQUAL_THAN (321) 47
    COLON (322) 64 177 178 179
    SEMI_COLON (323) 81 188 195 196 197 198 199 200 201
    ELLIPSIS (324) 151
    ASTERISK_ASSIGNMENT (325) 68
    SLASH_ASSIGNMENT (326) 69
    MODULO_ASSIGNMENT (327) 70
    PLUS_ASSIGNMENT (328) 71
    MINUS_ASSIGNMENT (329) 72
    LEFT_SHIFT_ASSIGNMENT (330) 73
    HASH (331)
    DECREMENT (332) 12 21
    RIGHT_PARENTHESES (333) 5 8 13 14 24 32 131 141 142 143 191 192 193 194 195 196 197
    BITWISE_AND (334) 25 52
    EQUALS (335) 49
    BITWISE_XOR (336) 54
    BITWISE_OR (337) 56
    LOGICAL_AND (338) 60
    LOGICAL_OR (339) 62
    RIGHT_SHIFT_ASSIGNMENT (340) 74
    NOT_EQUALS (341) 50
    BITWISE_AND_ASSIGNMENT (342) 75
    BITWISE_OR_ASSIGNMENT (343) 77
    BITWISE_XOR_ASSIGNMENT (344) 76
    INVALID_TOKEN (345)
    THEN (346)


Nonterminals, with rules where they appear

    $accept (92)
        on left: 0
    primary_expression <expression> (93)
        on left: 1 2 3 4 5
        on right: 6
    postfix_expression <array> (94)
        on left: 6 7 8 9 10 11 12 13 14
        on right: 7 8 9 10 11 12 19
    argument_expression_list_opt <parameterCount> (95)
        on left: 15 16
        on right: 8
    argument_expression_list <parameterCount> (96)
        on left: 17 18
        on right: 15 18
    unary_expression <array> (97)
        on left: 19 20 21 22 23 24
        on right: 20 21 23 31 66
    unary_operator <unaryOperator> (98)
        on left: 25 26 27 28 29 30
        on right: 22
    cast_expression <array> (99)
        on left: 31 32
        on right: 22 32 33 34 35 36
    multiplicative_expression <expression> (100)
        on left: 33 34 35 36
        on right: 34 35 36 37 38 39
    additive_expression <expression> (101)
        on left: 37 38 39
        on right: 38 39 40 41 42
    shift_expression <expression> (102)
        on left: 40 41 42
        on right: 41 42 43 44 45 46 47
    relational_expression <expression> (103)
        on left: 43 44 45 46 47
        on right: 44 45 46 47 48 49 50
    equality_expression <expression> (104)
        on left: 48 49 50
        on right: 49 50 51 52
    AND_expression <expression> (105)
        on left: 51 52
        on right: 52 53 54
    exclusive_OR_expression <expression> (106)
        on left: 53 54
        on right: 54 55 56
    inclusive_OR_expression <expression> (107)
        on left: 55 56
        on right: 56 59 60
    M <instructionNumber> (108)
        on left: 57
        on right: 60 62 64 185 191 192 194 195 196
    N <statement> (109)
        on left: 58
        on right: 64 191 192 196
    logical_AND_expression <expression> (110)
        on left: 59 60
        on right: 60 61 62
    logical_OR_expression <expression> (111)
        on left: 61 62
        on right: 62 63 64
    conditional_expression <expression> (112)
        on left: 63 64
        on right: 64 65 80
    assignment_expression <expression> (113)
        on left: 65 66
        on right: 17 18 66 78 79 132 134 136 137 138 159
    assignment_operator (114)
        on left: 67 68 69 70 71 72 73 74 75 76 77
        on right: 66
    expression <expression> (115)
        on left: 78 79
        on right: 5 7 64 79 189 191 192 193 194 195
    constant_expression (116)
        on left: 80
        on right: 122 169 178
    declaration (117)
        on left: 81
        on right: 186 197 205 209 210
    init_declarator_list_opt (118)
        on left: 82 83
        on right: 81
    declaration_specifiers (119)
        on left: 84 85 86 87
        on right: 81 88 154 155 206
    declaration_specifiers_opt (120)
        on left: 88 89
        on right: 84 85 86 87
    init_declarator_list (121)
        on left: 90 91
        on right: 82 91
    init_declarator <symbol> (122)
        on left: 92 93
        on right: 90 91
    storage_class_specifier (123)
        on left: 94 95 96 97
        on right: 84
    type_specifier (124)
        on left: 98 99 100 101 102 103 104 105 106 107 108 109
        on right: 85 110
    specifier_qualifier_list (125)
        on left: 110 111
        on right: 112 158
    specifier_qualifier_list_opt (126)
        on left: 112 113
        on right: 110 111
    enum_specifier (127)
        on left: 114 115 116
        on right: 109
    identifier_opt (128)
        on left: 117 118
        on right: 114 115
    enumerator_list (129)
        on left: 119 120
        on right: 114 115 120
    enumerator (130)
        on left: 121 122
        on right: 119 120
    type_qualifier (131)
        on left: 123 124 125
        on right: 86 111 148 149
    function_specifier (132)
        on left: 126
        on right: 87
    declarator <symbol> (133)
        on left: 127 128
        on right: 92 93 131 154 206
    change_scope (134)
        on left: 129
        on right: 141 143 181 206
    direct_declarator <symbol> (135)
        on left: 130 131 132 133 134 135 136 137 138 139 140 141 142 143
        on right: 127 128 132 133 134 135 136 137 138 139 140 141 142 143
    type_qualifier_list_opt (136)
        on left: 144 145
        on right: 146 147
    pointer <symbolType> (137)
        on left: 146 147
        on right: 127 147
    type_qualifier_list (138)
        on left: 148 149
        on right: 132 133 136 138 139 144 149
    parameter_type_list (139)
        on left: 150 151
        on right: 141
    parameter_list (140)
        on left: 152 153
        on right: 150 151 153
    parameter_declaration (141)
        on left: 154 155
        on right: 152 153
    identifier_list (142)
        on left: 156 157
        on right: 142 157
    type_name (143)
        on left: 158
        on right: 13 14 24 32
    initialiser <symbol> (144)
        on left: 159 160 161
        on right: 93 162 163
    initialiser_list (145)
        on left: 162 163
        on right: 13 14 160 161 163
    designation_opt (146)
        on left: 164 165
        on right: 162 163
    designation (147)
        on left: 166
        on right: 164
    designator_list (148)
        on left: 167 168
        on right: 166 168
    designator (149)
        on left: 169 170
        on right: 167 168
    statement <statement> (150)
        on left: 171 172 173 174 175 176
        on right: 177 178 179 187 191 192 193 194 195 196 197
    labeled_statement <statement> (151)
        on left: 177 178 179
        on right: 171
    change_block (152)
        on left: 180
        on right: 181
    compound_statement <statement> (153)
        on left: 181
        on right: 172
    block_item_list_opt <statement> (154)
        on left: 182 183
        on right: 181 206
    block_item_list <statement> (155)
        on left: 184 185
        on right: 182 185
    block_item <statement> (156)
        on left: 186 187
        on right: 184 185
    expression_statement <expression> (157)
        on left: 188
        on right: 173
    expression_opt <expression> (158)
        on left: 189 190
        on right: 188 196 197 201
    selection_statement <statement> (159)
        on left: 191 192 193
        on right: 174
    iteration_statement <statement> (160)
        on left: 194 195 196 197
        on right: 175
    jump_statement <statement> (161)
        on left: 198 199 200 201
        on right: 176
    translation_unit (162)
        on left: 202 203
        on right: 0 203
    external_declaration (163)
        on left: 204 205
        on right: 202 203
    function_definition (164)
        on left: 206
        on right: 204
    declaration_list_opt (165)
        on left: 207 208
        on right: 206
    declaration_list (166)
        on left: 209 210
        on right: 207 210


State 0

    0 $accept: • translation_unit $end
   81 declaration: • declaration_specifiers init_declarator_list_opt SEMI_COLON
   84 declaration_specifiers: • storage_class_specifier declaration_specifiers_opt
   85                       | • type_specifier declaration_specifiers_opt
   86                       | • type_qualifier declaration_specifiers_opt
   87                       | • function_specifier declaration_specifiers_opt
   94 storage_class_specifier: • EXTERN
   95                        | • STATIC
   96                        | • AUTO
   97                        | • REGISTER
   98 type_specifier: • VOIDTYPE
   99               | • CHARTYPE
  100               | • SHORT
  101               | • INTTYPE
  102               | • LONG
  103               | • DOUBLE
  104               | • SIGNED
  105               | • UNSIGNED
  106               | • BOOL
  107               | • COMPLEX
  108               | • IMAGINARY
  109               | • enum_specifier
  114 enum_specifier: • ENUM identifier_opt LEFT_CURLY_BRACKET enumerator_list RIGHT_CURLY_BRACKET
  115               | • ENUM identifier_opt LEFT_CURLY_BRACKET enumerator_list COMMA RIGHT_CURLY_BRACKET
  116               | • ENUM IDENTIFIER
  123 type_qualifier: • CONST
  124               | • RESTRICT
  125               | • VOLATILE
  126 function_specifier: • INLINE
  202 translation_unit: • external_declaration
  203                 | • translation_unit external_declaration
  204 external_declaration: • function_definition
  205                     | • declaration
  206 function_definition: • declaration_specifiers declarator declaration_list_opt change_scope LEFT_CURLY_BRACKET block_item_list_opt RIGHT_CURLY_BRACKET

    AUTO       shift, and go to state 1
    CHARTYPE   shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    INLINE     shift, and go to state 7
    INTTYPE    shift, and go to state 8
    LONG       shift, and go to state 9
    REGISTER   shift, and go to state 10
    RESTRICT   shift, and go to state 11
    SHORT      shift, and go to state 12
    SIGNED     shift, and go to state 13
    STATIC     shift, and go to state 14
    UNSIGNED   shift, and go to state 15
    VOIDTYPE   shift, and go to state 16
    VOLATILE   shift, and go to state 17
    BOOL       shift, and go to state 18
    COMPLEX    shift, and go to state 19
    IMAGINARY  shift, and go to state 20

    declaration              go to state 21
    declaration_specifiers   go to state 22
    storage_class_specifier  go to state 23
    type_specifier           go to state 24
    enum_specifier           go to state 25
    type_qualifier           go to state 26
    function_specifier       go to state 27
    translation_unit         go to state 28
    external_declaration     go to state 29
    function_definition      go to state 30


State 1

   96 storage_class_specifier: AUTO •

    $default  reduce using rule 96 (storage_class_specifier)


State 2

   99 type_specifier: CHARTYPE •

    $default  reduce using rule 99 (type_specifier)


State 3

  123 type_qualifier: CONST •

    $default  reduce using rule 123 (type_qualifier)


State 4

  103 type_specifier: DOUBLE •

    $default  reduce using rule 103 (type_specifier)


State 5

  114 enum_specifier: ENUM • identifier_opt LEFT_CURLY_BRACKET enumerator_list RIGHT_CURLY_BRACKET
  115               | ENUM • identifier_opt LEFT_CURLY_BRACKET enumerator_list COMMA RIGHT_CURLY_BRACKET
  116               | ENUM • IDENTIFIER
  117 identifier_opt: • IDENTIFIER
  118               | ε •  [LEFT_CURLY_BRACKET]

    IDENTIFIER  shift, and go to state 31

    $default  reduce using rule 118 (identifier_opt)

    identifier_opt  go to state 32


State 6

   94 storage_class_specifier: EXTERN •

    $default  reduce using rule 94 (storage_class_specifier)


State 7

  126 function_specifier: INLINE •

    $default  reduce using rule 126 (function_specifier)


State 8

  101 type_specifier: INTTYPE •

    $default  reduce using rule 101 (type_specifier)


State 9

  102 type_specifier: LONG •

    $default  reduce using rule 102 (type_specifier)


State 10

   97 storage_class_specifier: REGISTER •

    $default  reduce using rule 97 (storage_class_specifier)


State 11

  124 type_qualifier: RESTRICT •

    $default  reduce using rule 124 (type_qualifier)


State 12

  100 type_specifier: SHORT •

    $default  reduce using rule 100 (type_specifier)


State 13

  104 type_specifier: SIGNED •

    $default  reduce using rule 104 (type_specifier)


State 14

   95 storage_class_specifier: STATIC •

    $default  reduce using rule 95 (storage_class_specifier)


State 15

  105 type_specifier: UNSIGNED •

    $default  reduce using rule 105 (type_specifier)


State 16

   98 type_specifier: VOIDTYPE •

    $default  reduce using rule 98 (type_specifier)


State 17

  125 type_qualifier: VOLATILE •

    $default  reduce using rule 125 (type_qualifier)


State 18

  106 type_specifier: BOOL •

    $default  reduce using rule 106 (type_specifier)


State 19

  107 type_specifier: COMPLEX •

    $default  reduce using rule 107 (type_specifier)


State 20

  108 type_specifier: IMAGINARY •

    $default  reduce using rule 108 (type_specifier)


State 21

  205 external_declaration: declaration •

    $default  reduce using rule 205 (external_declaration)


State 22

   81 declaration: declaration_specifiers • init_declarator_list_opt SEMI_COLON
   82 init_declarator_list_opt: • init_declarator_list
   83                         | ε •  [SEMI_COLON]
   90 init_declarator_list: • init_declarator
   91                     | • init_declarator_list COMMA init_declarator
   92 init_declarator: • declarator
   93                | • declarator ASSIGNMENT initialiser
  127 declarator: • pointer direct_declarator
  128           | • direct_declarator
  130 direct_declarator: • IDENTIFIER
  131                  | • LEFT_PARENTHESES declarator RIGHT_PARENTHESES
  132                  | • direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list assignment_expression RIGHT_SQUARE_BRACKET
  133                  | • direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list RIGHT_SQUARE_BRACKET
  134                  | • direct_declarator LEFT_SQUARE_BRACKET assignment_expression RIGHT_SQUARE_BRACKET
  135                  | • direct_declarator LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
  136                  | • direct_declarator LEFT_SQUARE_BRACKET STATIC type_qualifier_list assignment_expression RIGHT_SQUARE_BRACKET
  137                  | • direct_declarator LEFT_SQUARE_BRACKET STATIC assignment_expression RIGHT_SQUARE_BRACKET
  138                  | • direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list STATIC assignment_expression RIGHT_SQUARE_BRACKET
  139                  | • direct_declarator LEFT_SQUARE_BRACKET type_qualifier_list ASTERISK RIGHT_SQUARE_BRACKET
  140                  | • direct_declarator LEFT_SQUARE_BRACKET ASTERISK RIGHT_SQUARE_BRACKET
  141                  | • direct_declarator LEFT_PARENTHESES change_scope parameter_type_list RIGHT_PARENTHESES
  142                  | • direct_declarator LEFT_PARENTHESES identifier_list RIGHT_PARENTHESES
  143                  | • direct_declarator LEFT_PARENTHESES change_scope RIGHT_PARENTHESES
  146 pointer: • ASTERISK type_qualifier_list_opt
  147        | • ASTERISK type_qualifier_list_opt pointer
  206 function_definition: declaration_specifiers • declarator declaration_list_opt change_scope LEFT_CURLY_BRACKET block_item_list_opt RIGHT_CURLY_BRACKET

    IDENTIFIER        shift, and go to state 33
    LEFT_PARENTHESES  shift, and go to state 34
    ASTERISK          shift, and go to state 35

    $default  reduce using rule 83 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 36
    init_declarator_list      go to state 37
    init_declarator           go to state 38
    declarator                go to state 39
    direct_declarator         go to state 40
    pointer                   go to state 41


State 23

   84 declaration_specifiers: • storage_class_specifier declaration_specifiers_opt
   84                       | storage_class_specifier • declaration_specifiers_opt
   85                       | • type_specifier declaration_specifiers_opt
   86                       | • type_qualifier declaration_specifiers_opt
   87                       | • function_specifier declaration_specifiers_opt
   88 declaration_specifiers_opt: • declaration_specifiers
   89                           | ε •  [IDENTIFIER, COMMA, LEFT_PARENTHESES, ASTERISK, SEMI_COLON, RIGHT_PARENTHESES]
   94 storage_class_specifier: • EXTERN
   95                        | • STATIC
   96                        | • AUTO
   97                        | • REGISTER
   98 type_specifier: • VOIDTYPE
   99               | • CHARTYPE
  100               | • SHORT
  101               | • INTTYPE
  102               | • LONG
  103               | • DOUBLE
  104               | • SIGNED
  105               | • UNSIGNED
  106               | • BOOL
  107               | • COMPLEX
  108               | • IMAGINARY
  109               | • enum_specifier
  114 enum_specifier: • ENUM identifier_opt LEFT_CURLY_BRACKET enumerator_list RIGHT_CURLY_BRACKET
  115               | • ENUM identifier_opt LEFT_CURLY_BRACKET enumerator_list COMMA RIGHT_CURLY_BRACKET
  116               | • ENUM IDENTIFIER
  123 type_qualifier: • CONST
  124               | • RESTRICT
  125               | • VOLATILE
  126 function_specifier: • INLINE

    AUTO       shift, and go to state 1
    CHARTYPE   shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    INLINE     shift, and go to state 7
    INTTYPE    shift, and go to state 8
    LONG       shift, and go to state 9
    REGISTER   shift, and go to state 10
    RESTRICT   shift, and go to state 11
    SHORT      shift, and go to state 12
    SIGNED     shift, and go to state 13
    STATIC     shift, and go to state 14
    UNSIGNED   shift, and go to state 15
    VOIDTYPE   shift, and go to state 16
    VOLATILE   shift, and go to state 17
    BOOL       shift, and go to state 18
    COMPLEX    shift, and go to state 19
    IMAGINARY  shift, and go to state 20

    $default  reduce using rule 89 (declaration_specifiers_opt)

    declaration_specifiers      go to state 42
    declaration_specifiers_opt  go to state 43
    storage_class_specifier     go to state 23
    type_specifier              go to state 24
    enum_specifier              go to state 25
    type_qualifier              go to state 26
    function_specifier          go to state 27


State 24

   84 declaration_specifiers: • storage_class_specifier declaration_specifiers_opt
   85                       | • type_specifier declaration_specifiers_opt
   85                       | type_specifier • declaration_specifiers_opt
   86                       | • type_qualifier declaration_specifiers_opt
   87                       | • function_specifier declaration_specifiers_opt
   88 declaration_specifiers_opt: • declaration_specifiers
   89                           | ε •  [IDENTIFIER, COMMA, LEFT_PARENTHESES, ASTERISK, SEMI_COLON, RIGHT_PARENTHESES]
   94 storage_class_specifier: • EXTERN
   95                        | • STATIC
   96                        | • AUTO
   97                        | • REGISTER
   98 type_specifier: • VOIDTYPE
   99               | • CHARTYPE
  100               | • SHORT
  101               | • INTTYPE
  102               | • LONG
  103               | • DOUBLE
  104               | • SIGNED
  105               | • UNSIGNED
  106               | • BOOL
  107               | • COMPLEX
  108               | • IMAGINARY
  109               | • enum_specifier
  114 enum_specifier: • ENUM identifier_opt LEFT_CURLY_BRACKET enumerator_list RIGHT_CURLY_BRACKET
  115               | • ENUM identifier_opt LEFT_CURLY_BRACKET enumerator_list COMMA RIGHT_CURLY_BRACKET
  116               | • ENUM IDENTIFIER
  123 type_qualifier: • CONST
  124               | • RESTRICT
  125               | • VOLATILE
  126 function_specifier: • INLINE

    AUTO       shift, and go to state 1
    CHARTYPE   shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    INLINE     shift, and go to state 7
    INTTYPE    shift, and go to state 8
    LONG       shift, and go to state 9
    REGISTER   shift, and go to state 10
    RESTRICT   shift, and go to state 11
    SHORT      shift, and go to state 12
    SIGNED     shift, and go to state 13
    STATIC     shift, and go to state 14
    UNSIGNED   shift, and go to state 15
    VOIDTYPE   shift, and go to state 16
    VOLATILE   shift, and go to state 17
    BOOL       shift, and go to state 18
    COMPLEX    shift, and go to state 19
    IMAGINARY  shift, and go to state 20
